fix responses and requests validation
